\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 3.4.9}{
\itemize{
 \item{Throw an error is duplicate sample IDs}
}
}

\section{Version 3.4.7}{
\itemize{
 \item{Clean-up of Called changes}
}
}

\section{Version 3.4.6}{
\itemize{
 \item{More checks (dba.load() etc) for Called}
}
}

\section{Version 3.4.5}{
\itemize{
 \item{Change spike-in normalization to use reference library sizes}
 \item{Change default spike-in normalization to NATIVE (TLE/TMM)}
 \item{Fix bug involving Called columns in reports}
 \item{Fix issue with package:parallel}
}
}

\section{Version 3.4.4}{
\itemize{
 \item{Fix error/warning in dba.blacklist realting to non-matching chromosome names}
}
}

\section{Version 3.4.2}{
\itemize{
 \item{Update man page for dba.report to clarify how fold changes are 
 reported when bNormalized=FALSE.}
  \item{Update code to ensure serial operation on windows.}
}
}

\section{Version 3.4}{
\itemize{
 \item{Fix bFlip issues}
 \item{Fix bug where mode not passed to summarizeOverlaps}
 \item{Add $inter.feature config parameter}
 \item{Re-compute FDR when fold change other than 0 is specified}
 \item{Remove most gc() calls for performance}
}
}


\section{Version 3.2}{
\itemize{
 \item{New type of plot: dba.plotProfile()}
 \item{Can mix single-end and paired-end bam files}
 \item{Various bug fixes}
}
}

\section{Version 3.0}{
\itemize{
\item{
This is a major release of DiffBind and the new version will be 3.0.

The main upgrade involves how the modelling and normalization are done. 
DiffBind now supports models and contrasts of arbitrary complexity 
using either/both DESeq2 or/and edgeR,
as well as a myriad of normalization options.

NB:

The previous methods for modelling are maintained for backward compatibility, 
however they are not the default. 
To repeat earlier analyses, dba.contrast() must be 
called explicitly with design=FALSE.
See ?DiffBind3 for more information.

The default mode for dba.count() is now to center around summits 